--- a/templates/index.html
+++ b/templates/index.html
@@ -3,9 +3,76 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <script src="https://code.jquery.com/jquery-3.5.0.js"></script>
 </head>
 <body>
+    <style>
+        body {
+                color:whitesmoke;
+                background-color: rgb(33, 37, 41);
+            }
+        #loginTrue{
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: flex-end
+        }
+        #loginoutBox{
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: flex-end
+        }
+        #home {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+        }
+    </style>
 
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- 홈화면 로그인 버튼 데모  -->
+<div id >
+    <p id="loginTrue">{{user_name}}</p>
+
+    <div id="loginoutBox">
+        <a href= {{ url_for("login") }} id="loginBox"><button onclick="">로그인</button></a>
+        <!-- <a href= {{ url_for("logout") }} id="logoutBox"><button>로그아웃</button></a> -->
+    </div>
+</div>
+
+
+<h1 id="home">뉴스피드 홈 화면 입니다.</h1>
+
+<script>
+const loginTrue = document.querySelector("#loginTrue").innerText
+const loginBoxTemp = `<a href= {{ url_for("login") }} id="loginBox"><button>로그인</button></a>`
+const logoutBoxTemp = `<a href= {{ url_for("logout") }} id="logoutBox"><button>로그아웃</button></a>`
+
+if (Boolean(loginTrue) == true){
+    $('#loginoutBox').empty()
+    $('#loginoutBox').append(logoutBoxTemp)
+    console.log('login succeed')
+}
+else if(Boolean(loginTrue) == false){
+    $('#loginoutBox').empty()
+    $('#loginoutBox').append(loginBoxTemp)
+    console.log('logout succeed')
+}
+</script>
+<!-- 홈화면 로그인 버튼 데모  -->
 
 </body>
 </html>
