--- a/templates/signup.html
+++ b/templates/signup.html
@@ -46,7 +46,7 @@
           
         <h1>Please Sign Up</h1>
         <div class="form-floating1">
-          <input type="email" class="form-control" id="floatingInput" placeholder="Make ID">
+          <input type="id" class="form-control" id="floatingInput" placeholder="Make ID">
           <label for="floatingInput"></label>
         </div>
         <div class="form-floating2">
@@ -58,7 +58,7 @@
 
 
         <button class="w-100 btn btn-lg btn-primary" type="submit">회원가입</button>
-        <a href="login"><p class="signup">Back Login</p></a>
+        <a href= {{ url_for('login') }}><p class="signup">Back Login</p></a>
         <p class="mt-5 mb-3 text-muted">&copy;HOTSIX</p>
       </form>
     
