modal page ~ing

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -25,10 +25,17 @@
     <div class="profile">
         <img class="profile_img" src="/static/img/기본 이미지.jpg" alt="img">
         <h1 class="profile_name">한동주</h1>
-         <div class="modal">
-      <div class="modal_body">Modal</div>
+        <button type='button' id="modal_btn">프로필 수정</button>
     </div>
-    <button class="btn-open-popup">프로필 수정하기</button>
+
+<!--모달창 시작-->
+    <div class="black_bg"></div>
+    <div class="modal_wrap">
+        <div class="modal_close"><a href="#">close</a></div>
+<!--모달창 내부 내용-->
+        <div class="modal_top">
+            <h1>프로필 수정</h1>
+        </div>
     </div>
     <hr style="width:80%">
     <h2 style="margin-left:10%">내가 작성한 글</h2>
@@ -40,7 +47,7 @@
         <a class="title">글 제목</a>
         <p class="content">글 내용</p>
         <div class="accessory">
-            <img src="/static/img/ic_like.jpg" width="16px"> Like <img src="/static/img/ic_comment.jpg" width="16px"> Comments
+            <img src="/static/img/ic_comment.jpg" width="16px"> Comments
         </div>
     </div>
     <div class="feed">
@@ -49,7 +56,7 @@
         <a class="title">글 제목</a>
         <p class="content">글 내용</p>
         <div class="accessory">
-            <img src="/static/img/ic_like.jpg" width="16px"> Like <img src="/static/img/ic_comment.jpg" width="16px"> Comments
+            <img src="/static/img/ic_comment.jpg" width="16px"> Comments
         </div>
     </div>
     <div class="feed">
@@ -58,7 +65,7 @@
         <a class="title">글 제목</a>
         <p class="content">글 내용</p>
         <div class="accessory">
-            <img src="/static/img/ic_like.jpg" width="16px"> Like <img src="/static/img/ic_comment.jpg" width="16px"> Comments
+            <img src="/static/img/ic_comment.jpg" width="16px"> Comments
         </div>
     </div>
 </div>
