--- a/static/css/mainSection.css
+++ b/static/css/mainSection.css
@@ -1,4 +1,3 @@
-
 .back_img {
     height: 350px;
     width: 80%;
@@ -24,7 +23,7 @@
     font-size: 30px;
     font-weight: bold;
 }
-.btn-open-popup {
+#modal_btn {
     height : 40px;
     margin-right: 10%;
     margin-top : 10%;
