--- a/static/css/modal.css
+++ b/static/css/modal.css
@@ -1,35 +1,44 @@
-.modal {
-        position: absolute;
-        top: 0;
-        left: 0;
-
-        width: 100%;
-        height: 100%;
-
+.modal_wrap{
         display: none;
-
-        background-color: rgba(0, 0, 0, 0.4);
-      }
-
-      .modal.show {
-        display: block;
-      }
-
-      .modal_body {
+        width: 500px;
+        height: 100%;
         position: absolute;
         top: 50%;
         left: 50%;
-
-        width: 400px;
-        height: 600px;
-
-        padding: 40px;
-
+        margin: -250px 0 0 -250px;
+        background:white;
+        z-index: 2;
+    }
+    .black_bg{
+        display: none;
+        position: absolute;
+        content: "";
+        width: 100%;
+        height: 100%;
+        background-color:rgba(0, 0,0, 0.5);
+        top:0;
+        left: 0;
+        z-index: 1;
+    }
+    .modal_close{
+        width: 26px;
+        height: 26px;
+        position: absolute;
+        top: -30px;
+        right: 0;
+    }
+    .modal_close> a{
+        display: block;
+        width: 100%;
+        height: 100%;
+        background:url(https://img.icons8.com/metro/26/000000/close-window.png);
+        text-indent: -9999px;
+    }
+    /*모달 내부 시작*/
+    .modal_top {
         text-align: center;
-
-        background-color: rgb(255, 255, 255);
-        border-radius: 10px;
-        box-shadow: 0 2px 3px 0 rgba(34, 36, 38, 0.15);
-
-        transform: translateX(-50%) translateY(-50%);
-      }
+        font-weight: bold;
+        margin-top : 20px;
+        padding-bottom: 20px;
+        border-bottom : 1px solid black;
+    }
