--- a/static/css/modal.css
+++ b/static/css/modal.css
@@ -1,7 +1,7 @@
 .modal_wrap{
         display: none;
         width: 500px;
-        height: 100%;
+        height: 600px;
         position: absolute;
         top: 50%;
         left: 50%;
@@ -41,4 +41,25 @@
         margin-top : 20px;
         padding-bottom: 20px;
         border-bottom : 1px solid black;
+    }
+    .modal_profile {
+        display: flex;
+        justify-content: space-between;
+        margin : 10px;
+    }
+    .modal_profile_img{
+        position: relative;
+    width : 150px;
+    height: 150px;
+    border-radius: 70%;
+    margin : 10px 0 50px 10px;
+    object-fit: cover;
+    }
+    .modal_back_img {
+        height: 200px;
+        width: 80%;
+        display: block;
+        margin : 3px auto;
+        border-radius: 20px;
+        opacity: 0.8;
     }
