--- a/templates/page.html
+++ b/templates/page.html
@@ -5,38 +5,48 @@
     <title>pagenation</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
+<script>
+    function show_user(){
+        document.getElementById("user_id").addEventListener('click',e=>{window.location = 'https://tistory.com'})
+    }
+</script>
 <body>
     <h1>Bootstrap pagnation</h1>
-
     <div class="container">
-        {{pagination.links}}
-
         <div class="table-responsive">
             <table class="table table-hover">
                 <thead>
                 <tr>
                     <th>
-                        #
+                        순서
                     </th>
                     <th>
-                        value
+                        내용
+                    </th>
+                    <th>
+                        유저아이디
                     </th>
                 </tr>
                 </thead>
                 <tbody>
-                    {% for user in users %}
+                <!--flask에서 보내준 users를 순회하면서 user를 가져온다-->
+                    {% for post in posts %}
                     <tr>
                         <td>
                             {{loop.index +(page-1)*per_page}}
                         </td>
-                        <td>
-                            {{user}}
+                        <td id="user_id" onclick="show_user()">
+                            {{post.id}}
+                        </td>
+                         <td>
+                            {{post.post_text}}
                         </td>
                     </tr>
                     {% endfor %}
                 </tbody>
             </table>
         </div>
+        <!--각 페이지로 갈 수 있는 링크-->
         {{pagination.links}}
     </div>
 </body>
