--- a/templates/profile.html
+++ b/templates/profile.html
@@ -8,7 +8,15 @@
     <link rel="stylesheet" type="text/css" href="/static/css/mainSection.css">
     <link rel="stylesheet" type="text/css" href="/static/css/feed.css">
     <link rel="stylesheet" type="text/css" href="/static/css/modal.css">
+    <script
+  src="https://code.jquery.com/jquery-3.6.1.min.js"
+  integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ="
+  crossorigin="anonymous"></script>
+
     <script type="text/javascript" src="/static/js/script.js"></script>
+    <script>
+
+    </script>
 </head>
 <body>
 <header>
@@ -19,10 +27,10 @@
     </div>
 </header>
 <section>
-    <img class="back_img" src="/static/img/배경예시.jpg" alt="img">
+    <img id="back_img" src="/static/img/배경예시.jpg" alt="img">
     <div class="profile">
-        <img class="profile_img" src="/static/img/기본 이미지.jpg" alt="img">
-        <h1 class="profile_name">한동주</h1>
+        <img id="profile_img" src="/static/img/기본 이미지.jpg" alt="img">
+        <h1 id="profile_name">한동주</h1>
         <button type='button' id="modal_btn">프로필 수정</button>
     </div>
 
