--- a/templates/page.html
+++ b/templates/page.html
@@ -12,19 +12,20 @@
 </script>
 <body>
     <h1>Bootstrap pagnation</h1>
+
     <div class="container">
         <div class="table-responsive">
             <table class="table table-hover">
                 <thead>
                 <tr>
                     <th>
-                        순서
+                        count
+                    </th>
+                    <th>
+                        user_id
                     </th>
                     <th>
                         내용
-                    </th>
-                    <th>
-                        유저아이디
                     </th>
                 </tr>
                 </thead>
