--- a/templates/page.html
+++ b/templates/page.html
@@ -6,43 +6,45 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <script>
-    function show_user(){
-        document.getElementById("user_id").addEventListener('click',e=>{window.location = 'https://tistory.com'})
+    function show_user() {
+        document.getElementById("user_id").addEventListener('click', e => {
+            window.location = 'https://tistory.com'
+        })
     }
 </script>
 <body>
-    <h1>Bootstrap pagnation</h1>
-
-    <div class="container">
-        <div class="table-responsive">
-            <table class="table table-hover">
-                <thead>
-                <tr>
-                    <th>
-                        user_id
-                    </th>
-                    <th>
-                        내용
-                    </th>
-                </tr>
-                </thead>
-                <tbody>
-                <!--flask에서 보내준 posts를 순회하면서 post를 가져온다-->
-                    {% for post in posts %}
-                    <tr>
-                        <td id="user_id" onclick="show_user()">
-                            {{post.id}}
-                        </td>
-                         <td>
-                            {{post.post_text}}
-                        </td>
-                    </tr>
-                    {% endfor %}
-                </tbody>
-            </table>
-        </div>
-        <!--각 페이지로 갈 수 있는 링크-->
-        {{pagination.links}}
+<h1>Bootstrap pagnation</h1>
+<!--각 페이지로 갈 수 있는 링크-->
+{{pagination.links}}
+<div class="container">
+    <div class="table-responsive">
+        <table class="table table-hover">
+            <thead>
+            <tr>
+                <th>
+                    user_id
+                </th>
+                <th>
+                    내용
+                </th>
+            </tr>
+            </thead>
+            <tbody>
+            <!--flask에서 보내준 posts를 순회하면서 post를 가져온다-->
+            {% for post in posts %}
+            <tr>
+                <td id="user_id" onclick="show_user()">
+                    {{post.id}}
+                </td>
+                <td>
+                    {{post.post_text}}
+                </td>
+            </tr>
+            {% endfor %}
+            </tbody>
+        </table>
     </div>
+
+</div>
 </body>
 </html>
