--- a/templates/page.html
+++ b/templates/page.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>pagenation</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- JavaScript Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </head>
 <script>
     function show_user() {
@@ -14,8 +16,7 @@
 </script>
 <body>
 <h1>Bootstrap pagnation</h1>
-<!--각 페이지로 갈 수 있는 링크-->
-{{pagination.links}}
+
 <div class="container">
     <div class="table-responsive">
         <table class="table table-hover">
@@ -38,13 +39,15 @@
                 </td>
                 <td>
                     {{post.post_text}}
+                    <!--이동 태그를 넣었는데 여기에 어떤 값을 넣어야 하는가<a href="login.html">이동</a>-->
                 </td>
             </tr>
             {% endfor %}
             </tbody>
         </table>
     </div>
-
+<!--각 페이지로 갈 수 있는 링크-->
+{{pagination.links}}
 </div>
 </body>
 </html>
