--- a/templates/profile.html
+++ b/templates/profile.html
@@ -22,14 +22,13 @@
     <h1>PROFILE PAGE</h1>
     <div>
         <button onclick = "location.href = '{{url_for('home')}}' " type='button'>HOME</button>
-        <button onclick = "location.href = '{{url_for('home')}}' " type='button'>LOGOUT</button>
     </div>
 </header>
 <section>
     <img id="back_img" src="/static/img/배경예시.jpg" alt="img">
     <div class="profile">
         <img id="profile_img" src="/static/img/기본 이미지.jpg" alt="img">
-        <h1 id="profile_name">한동주</h1>
+        <h1 id="profile_name">${name}</h1>
         <button onclick = "location.href = '{{url_for('profile_update')}}' " type='button' id="profile_btn">프로필 수정</button>
     </div>
 
