--- a/templates/profile_update.html
+++ b/templates/profile_update.html
@@ -99,6 +99,7 @@
             배경 사진 <input class="file-input" id="background-input" type="file"></input> <label for="background-input">수정</label>
         </div>
         <img id="back_img_update" src="/static/img/배경예시.jpg" alt="img">
+        <button onclick = "location.href = '{{url_for('profile')}}' " type='button'>수정 완료</button>
     </div>
 </body>
 </html>
