--- a/templates/index.html
+++ b/templates/index.html
@@ -1,80 +1,57 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-    <script src="https://code.jquery.com/jquery-3.5.0.js"></script>
-</head>
-<body>
-    <style>
-        body {
-                color:whitesmoke;
-                background-color: rgb(33, 37, 41);
-            }
-        #loginTrue{
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: flex-end
-        }
-        #loginoutBox{
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: flex-end
-        }
-        #home {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-        }
-    </style>
-
-
-
-
-
-
-
-
-
-
-
-
-
-<!-- 홈화면 로그인 버튼 데모  -->
-<div id >
-    <p id="loginTrue">{{user_name}}</p>
-
-    <div id="loginoutBox">
-        <a href= {{ url_for("login") }} id="loginBox"><button onclick="">로그인</button></a>
-        <!-- <a href= {{ url_for("logout") }} id="logoutBox"><button>로그아웃</button></a> -->
-    </div>
+{% extends 'base.html' %}
+{% block style %}
+  <style>
+    body {
+      color:whitesmoke;
+      background-color: rgb(33, 37, 41);
+    }
+    #loginTrue{
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: flex-end
+    }
+    #loginoutBox{
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: flex-end
+    }
+    #home {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
+  </style>
+{% endblock style %}
+{% block header %}
+<p id="loginTrue">{{user_name}}</p>
+<div id="loginoutBox">
+    <a href= {{ url_for("login") }} id="loginBox"><button onclick="">로그인</button></a>
+    <!-- <a href= {{ url_for("logout") }} id="logoutBox"><button>로그아웃</button></a> -->
 </div>
-
-
+{% endblock header %}
+{% block main %}
 <h1 id="home">뉴스피드 홈 화면 입니다.</h1>
-
+{% endblock main %}
+{% block script %}
 <script>
-const loginTrue = document.querySelector("#loginTrue").innerText
-const loginBoxTemp = `<a href= {{ url_for("login") }} id="loginBox"><button>로그인</button></a>`
-const logoutBoxTemp = `<a href= {{ url_for("logout") }} id="logoutBox"><button>로그아웃</button></a>`
-const profileBoxTemp = `<a href= {{ url_for("profile") }} id="logoutBox"><button>내 프로필</button></a>`
-
-if (Boolean(loginTrue) == true){
-    $('#loginoutBox').empty()
-    $('#loginoutBox').append(logoutBoxTemp)
-    $('#loginoutBox').append(profileBoxTemp)
-    console.log('login succeed')
-}
-else if(Boolean(loginTrue) == false){
-    $('#loginoutBox').empty()
-    $('#loginoutBox').append(loginBoxTemp)
-    console.log('logout succeed')
-}
-</script>
-<!-- 홈화면 로그인 버튼 데모  -->
-
-</body>
-</html>
+  const loginTrue = document.querySelector("#loginTrue").innerText
+  const loginBoxTemp = `<a href= {{ url_for("login") }} id="loginBox"><button>로그인</button></a>`
+  const logoutBoxTemp = `<a href= {{ url_for("logout") }} id="logoutBox"><button>로그아웃</button></a>`
+  const profileBoxTemp = `<a href= {{ url_for("profile") }} id="logoutBox"><button>내 프로필</button></a>`
+  
+  if (Boolean(loginTrue) == true){
+      $('#loginoutBox').empty()
+      $('#loginoutBox').append(logoutBoxTemp)
+      $('#loginoutBox').append(profileBoxTemp)
+      console.log('login succeed')
+  }
+  else if(Boolean(loginTrue) == false){
+      $('#loginoutBox').empty()
+      $('#loginoutBox').append(loginBoxTemp)
+      console.log('logout succeed')
+  }
+  </script>
+{% endblock script %}
