--- a/templates/login.html
+++ b/templates/login.html
@@ -1,50 +1,34 @@
-<!doctype html>
-<html>
-
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link href="./bootstrap-5.1.3-dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
-
-    <title>login</title>
-    <link href="https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap" rel="stylesheet">
-
-</head>
+{% extends 'base.html' %}
+{% block style %}
+<link href="https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap" rel="stylesheet">
 <style>
-    body {
-        color: whitesmoke;
-        background-color: rgb(33, 37, 41);
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        min-height: 100vh;
-        text-align: center;
-    }
+  body {
+      color: whitesmoke;
+      background-color: rgb(33, 37, 41);
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      min-height: 100vh;
+      text-align: center;
+  }
 
-    .signup {
-        margin-top: 5%;
-    }
+  .signup {
+      margin-top: 5%;
+  }
 
-    .form-floating1 {
-        margin-top: 15px;
-        color: black;
-    }
+  .form-floating1 {
+      margin-top: 15px;
+      color: black;
+  }
 
-    .form-floating2 {
-        color: black;
-    }
-
+  .form-floating2 {
+      color: black;
+  }
 </style>
-
-<body>
-    <a href="{{ url_for('home')}}">home</a>
+{% endblock style %}
+{% block main %}
+<a href="{{ url_for('home')}}">home</a>
     <!-- form method="POST" 에  methods  s 를 붙이면 안된다... 이것때문에 4시간 날렷습니다.-->
     <form method="POST" id="login" action="{{url_for("login")}}">
         <h1>Please login</h1>
@@ -64,7 +48,4 @@
         <p id="HOTSIX" class="mt-5 mb-3 text-muted">&copy;HOTSIX</p>
     </form>
         <div id="login_confirm">{{login_confirm}}</div>
-
-</body>
-
-</html>
+{% endblock main %}
