--- a/templates/page.html
+++ b/templates/page.html
@@ -1,20 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>pagenation</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- JavaScript Bundle with Popper -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-</head>
-<script>
-    function show_user() {
-        document.getElementById("user_id").addEventListener('click', e => {
-            window.location = 'https://tistory.com'
-        })
-    }
-</script>
-<body>
+{% extends 'base.html' %}
+{% block main %}
 <h1>Bootstrap pagnation</h1>
 
 <div class="container">
@@ -49,5 +34,13 @@
 <!--각 페이지로 갈 수 있는 링크-->
 {{pagination.links}}
 </div>
-</body>
-</html>
+{% endblock main %}
+{% block script %}
+<script>
+  function show_user() {
+      document.getElementById("user_id").addEventListener('click', e => {
+          window.location = 'https://tistory.com'
+      })
+  }
+</script>
+{% endblock script %}
