--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -3,10 +3,11 @@ body {
  font-family: 'Nerko One';
 }
 
-a {
-  text-decoration: none;
-  color: white;
-}
+a { text-decoration: none; color: black; }
+    a:visited { text-decoration: none; }
+    a:hover { text-decoration: none; }
+    a:focus { text-decoration: none; }
+    a:hover, a:active { text-decoration: none; }
 .navbar {
   display: flex;
   justify-content: space-between;
