--- a/plus/templates/signupsucceded.html
+++ b/plus/templates/signupsucceded.html
@@ -1,25 +1,11 @@
 {% extends 'base.html' %}
 {% block style %}
   <link href="https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap" rel="stylesheet">
-  <style>
-    body {
-        color: whitesmoke;
-        background-color: rgb(33, 37, 41);
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        min-height: 100vh;
-        text-align: center;
-    }
-  </style>
+  <link href="{{url_for('static', filename="styles/signupsucceded.css")}}" rel="stylesheet" type="text/css">
 {% endblock style %}
-{% block header %}{% endblock header %}
 {% block main %}
   <h1 id="signupsucceded">HOTSIX 회원가입 성공!!</h1>
-  <!-- <h1 id="signupsucceded">{{already_signup}}</h1> -->
-  <button onclick="{{ window.location.href = {{ url_for('login') }} }}">
+  <button onclick="window.location.href = {{ url_for('login') }}">
       로그인 하러가기
   </button>
 {% endblock main %}
-{% block script %}{% endblock script %}
