--- a/templates/profile.html
+++ b/templates/profile.html
@@ -38,21 +38,21 @@
 <div class="container">
     <div class="feed">
         <h3 class="name">이름</h3>
-        <p class="content">글 내용</p>
+        <p class="content">{{data[0]["post_text"]}}</p>
         <div class="accessory">
             <img src="/static/img/ic_comment.jpg" width="16px"> Comments
         </div>
     </div>
     <div class="feed">
         <h3 class="name">이름</h3>
-        <p class="content">글 내용</p>
+        <p class="content">123</p>
         <div class="accessory">
             <img src="/static/img/ic_comment.jpg" width="16px"> Comments
         </div>
     </div>
     <div class="feed">
         <h3 class="name">이름</h3>
-        <p class="content">글 내용</p>
+        <p class="content">123</p>
         <div class="accessory">
             <img src="/static/img/ic_comment.jpg" width="16px"> Comments
         </div>
