--- a/templates/hot6.html
+++ b/templates/hot6.html
@@ -31,7 +31,11 @@
     </ul>
 </nav>
 
+<div class="pagination">
+    <ol id="numbers">
 
+    </ol>
+</div>
 {% for post in posts %}
 <div class="main">
     <div class="post">
@@ -50,5 +54,6 @@
 {% endfor %}
 </div>
 {{pagination.links}}
+
 </body>
 </html>
