--- a/templates/login.html
+++ b/templates/login.html
@@ -45,11 +45,10 @@
 
 <body>
     <a href="{{ url_for('home')}}">home</a>
-    <!-- form method="POST" 에  methods  s 를 붙이면 안된다... 이것때문에 4시간 날렷습니다.-->
-    <form method="POST" id="login" action="{{url_for("login")}}">
+    <form onsubmit="return handleSubmit()" method="POST" id="login" action="{{url_for('login')}}">
         <h1>Please login</h1>
         <div class="form-floating1">
-            <input type="id" class="form-control" id="floatingInput" name="floatingInput" placeholder="ID">
+            <input type="id" class="form-control" id="floatingInput" name="floatingInput" placeholder="ID" value="{{input_id}}">
             <label for="floatingInput"></label>
         </div>
         <div class="form-floating2">
@@ -57,14 +56,15 @@
                 placeholder="Password">
             <label for="floatingPassword"></label>
         </div>
-        <button class="w-100 btn btn-lg btn-primary" type="submit">로그인</button>
+        <button onclick="confirmInput()" class="w-100 btn btn-lg btn-primary" type="submit">로그인</button>
         <a href="{{ url_for('signup')}}">
             <p class="signup">Sign Up</p>
         </a>
         <p id="HOTSIX" class="mt-5 mb-3 text-muted">&copy;HOTSIX</p>
     </form>
-        <div id="login_confirm">{{login_confirm}}</div>
+        <p id="login_confirm">{{login_confirm}}</p>
 
 </body>
+
 
 </html>
