--- a/templates/login.html
+++ b/templates/login.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="./bootstrap-5.1.3-dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
+            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+            crossorigin="anonymous"></script>
 
     <title>login</title>
     <link href="https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap" rel="stylesheet">
@@ -44,25 +44,26 @@
 </style>
 
 <body>
-    <a href="{{ url_for('home')}}">home</a>
-    <form onsubmit="return handleSubmit()" method="POST" id="login" action="{{url_for('login')}}">
-        <h1>Please login</h1>
-        <div class="form-floating1">
-            <input type="id" class="form-control" id="floatingInput" name="floatingInput" placeholder="ID" value="{{input_id}}">
-            <label for="floatingInput"></label>
-        </div>
-        <div class="form-floating2">
-            <input type="password" class="form-control" id="floatingPassword" name="floatingPassword"
-                placeholder="Password">
-            <label for="floatingPassword"></label>
-        </div>
-        <button onclick="confirmInput()" class="w-100 btn btn-lg btn-primary" type="submit">로그인</button>
-        <a href="{{ url_for('signup')}}">
-            <p class="signup">Sign Up</p>
-        </a>
-        <p id="HOTSIX" class="mt-5 mb-3 text-muted">&copy;HOTSIX</p>
-    </form>
-        <p id="login_confirm">{{login_confirm}}</p>
+<a href="{{ url_for('home')}}">home</a>
+<form onsubmit="return handleSubmit()" method="POST" id="login" action="{{url_for('login')}}">
+    <h1>Please login</h1>
+    <div class="form-floating1">
+        <input type="id" class="form-control" id="floatingInput" name="floatingInput" placeholder="ID"
+               value="{{input_id}}">
+        <label for="floatingInput"></label>
+    </div>
+    <div class="form-floating2">
+        <input type="password" class="form-control" id="floatingPassword" name="floatingPassword"
+               placeholder="Password">
+        <label for="floatingPassword"></label>
+    </div>
+    <button onclick="confirmInput()" class="w-100 btn btn-lg btn-primary" type="submit">로그인</button>
+    <a href="{{ url_for('signup')}}">
+        <p class="signup">Sign Up</p>
+    </a>
+    <p id="HOTSIX" class="mt-5 mb-3 text-muted">&copy;HOTSIX</p>
+</form>
+<p id="login_confirm">{{login_confirm}}</p>
 
 </body>
 
