--- a/templates/profile.html
+++ b/templates/profile.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" type="text/css" href="/static/css/mainSection.css">
     <link rel="stylesheet" type="text/css" href="/static/css/feed.css">
     <script
-  src="https://code.jquery.com/jquery-3.6.1.min.js"
-  integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ="
-  crossorigin="anonymous"></script>
+            src="https://code.jquery.com/jquery-3.6.1.min.js"
+            integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ="
+            crossorigin="anonymous"></script>
 
     <script type="text/javascript" src="/static/js/script.js"></script>
     <script>
@@ -21,7 +21,7 @@
 <header>
     <h1>PROFILE PAGE</h1>
     <div>
-        <button onclick = "location.href = '{{url_for('home')}}' " type='button'>HOME</button>
+        <button onclick="location.href = '{{url_for('home')}}' " type='button'>HOME</button>
     </div>
 </header>
 <section>
@@ -29,7 +29,8 @@
     <div class="profile">
         <img id="profile_img" src="/static/img/기본 이미지.jpg" alt="img">
         <h1 id="profile_name">${name}</h1>
-        <button onclick = "location.href = '{{url_for('profile_update')}}' " type='button' id="profile_btn">프로필 수정</button>
+        <button onclick="location.href = '{{url_for('profile_update')}}' " type='button' id="profile_btn">프로필 수정
+        </button>
     </div>
 
     <hr style="width:80%">
