--- a/templates/signup.html
+++ b/templates/signup.html
@@ -6,18 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="./bootstrap-5.1.3-dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
+            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+            crossorigin="anonymous"></script>
 
     <title>login</title>
     <link href="https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap" rel="stylesheet">
 
 </head>
 <style>
-    
+
     body {
         color: whitesmoke;
         background-color: rgb(33, 37, 41);
@@ -44,33 +44,37 @@
 </style>
 
 <body>
-    <a href="{{url_for('home')}}">home</a>
+<a href="{{url_for('home')}}">home</a>
 
-    <form id="signupForm" method="POST" action="{{url_for('signup')}}">
+<form id="signupForm" method="POST" action="{{url_for('signup')}}">
     <h1>Please Sign Up</h1>
     <div class="form-floating1">
-        <input type="id" class="form-control" id="signupid" name="signup_input_id" placeholder="Make ID" maxlength="20" value="{{input_id}}">
+        <input type="id" class="form-control" id="signupid" name="signup_input_id" placeholder="Make ID" maxlength="20"
+               value="{{input_id}}">
         <label for="floatingInput"></label>
-        <input type="id" class="form-control" id="signupname" name="signup_input_name" placeholder="Your name" maxlength="20" value="{{input_name}}">
+        <input type="id" class="form-control" id="signupname" name="signup_input_name" placeholder="Your name"
+               maxlength="20" value="{{input_name}}">
         <label for="floatingInput"></label>
     </div>
-    
+
     <div class="form-floating2">
-        <input type="password" class="form-control" id="signuppw" name="signup_input_pw" placeholder="Make Password" maxlength="20">
+        <input type="password" class="form-control" id="signuppw" name="signup_input_pw" placeholder="Make Password"
+               maxlength="20">
         <label for="floatingPassword"></label>
         <!-- <input type="password" class="form-control" id="floatingPassword" name="signup_confirm_pw" placeholder="Confirm Password">
         <label for="floatingPassword"></label> -->
     </div>
-    
+
     <button class="w-100 btn btn-lg btn-primary" type="submit">회원가입</button>
-    </form>
-    
-    <a href="{{ url_for('login') }}">
-        <p class="backlogin">Back Login</p>
-    </a>
-    <p class="mt-5 mb-3 text-muted">&copy;HOTSIX</p>
-    
-    <p>{{confirm_id_name_pw}}{{confirm_id_msg}}{{confirm_name_msg}}{{confirm_pw_msg}}{{already_name_msg}}{{already_id_msg}}</p>
+</form>
+
+<a href="{{ url_for('login') }}">
+    <p class="backlogin">Back Login</p>
+</a>
+<p class="mt-5 mb-3 text-muted">&copy;HOTSIX</p>
+
+<p>
+    {{confirm_id_name_pw}}{{confirm_id_msg}}{{confirm_name_msg}}{{confirm_pw_msg}}{{already_name_msg}}{{already_id_msg}}</p>
 
 </body>
 
