--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,49 +1,9 @@
-<!doctype html>
-<html>
-
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link href="./bootstrap-5.1.3-dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-            crossorigin="anonymous"></script>
-
-    <title>login</title>
-    <link href="https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap" rel="stylesheet">
-
-</head>
-<style>
-
-    body {
-        color: whitesmoke;
-        background-color: rgb(33, 37, 41);
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        min-height: 100vh;
-        text-align: center;
-    }
-
-    .backlogin {
-        margin-top: 5%;
-    }
-
-    .form-floating1 {
-        margin-top: 15px;
-        color: black;
-    }
-
-    .form-floating2 {
-        color: black;
-    }
-</style>
-
-<body>
+{% extends 'base.html' %}
+{% block style %}
+<link href="https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap" rel="stylesheet">
+<link href="{{url_for('static', filename='styles/signup.css')}}" rel="stylesheet" type="text/css">
+{% endblock style %}
+{% block main %}
 <a href="{{url_for('home')}}">home</a>
 
 <form id="signupForm" method="POST" action="{{url_for('signup')}}">
@@ -76,6 +36,4 @@
 <p>
     {{confirm_id_name_pw}}{{confirm_id_msg}}{{confirm_name_msg}}{{confirm_pw_msg}}{{already_name_msg}}{{already_id_msg}}</p>
 
-</body>
-
-</html>
+{% endblock main %}
