--- a/templates/signupsucceded.html
+++ b/templates/signupsucceded.html
@@ -1,45 +1,12 @@
-<!doctype html>
-<html>
-
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link href="./bootstrap-5.1.3-dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-            crossorigin="anonymous"></script>
-
-    <title>signupsucceded</title>
-    <link href="https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap" rel="stylesheet">
-
-</head>
-<style>
-    body {
-        color: whitesmoke;
-        background-color: rgb(33, 37, 41);
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        min-height: 100vh;
-        text-align: center;
-    }
-
-    #loginbutton {
-        color: whitesmoke;
-    }
-
-</style>
-
-<body>
+{% extends 'base.html' %}
+{% block style %}
+<link href="https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap" rel="stylesheet">
+<link href="{{url_for('static', filename='styles/signupsucceded.css')}}" rel="stylesheet" type="text/css">
+{% endblock style %}
+{% block main %}
 <h1 id="signupsucceded">HOTSIX 회원가입 성공!!</h1>
 <!-- <h1 id="signupsucceded">{{already_signup}}</h1> -->
 <form action="{{url_for('login')}}">
     <button class="w-100 btn btn-lg btn-primary" id="loginbutton">로그인 하러가기</button>
-    </fozrm>
-</body>
-
-</html>
+</form>
+{% endblock main %}
